media/templates/sonarr/sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8989
  selector:
    app: sonarr
  type: ClusterIP
